[gd_scene load_steps=12 format=3 uid="uid://cj2scnn4v5j05"]

[ext_resource type="Script" uid="uid://cou1w73q5lnsl" path="res://Scripts/menu.gd" id="1_8gbba"]
[ext_resource type="Texture2D" uid="uid://ddagx6ofdjisq" path="res://Assets/MuKEyL.png" id="2_jjvhh"]
[ext_resource type="FontFile" uid="uid://eswe8xr4ogbl" path="res://Assets/Fonts/Minecraft.ttf" id="3_kry3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rerr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhh6f"]
bg_color = Color(0.69965345, 0.69965345, 0.69965345, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cayip"]
bg_color = Color(0.7792914, 0.7792914, 0.7792913, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1rerr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cayip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8gbba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjvhh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kry3j"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gbba")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jjvhh")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.52156866)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.5
offset_top = 64.0
offset_right = 52.5
offset_bottom = 124.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_kry3j")
theme_override_font_sizes/font_size = 60
text = "Roll"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.75
offset_top = -45.0
offset_right = 74.75
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/hover = SubResource("StyleBoxFlat_cayip")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rerr")
text = "Play"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/hover = SubResource("StyleBoxFlat_cayip")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rerr")
text = "Options
"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_1rerr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/hover = SubResource("StyleBoxFlat_cayip")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1rerr")
text = "Exit"

[node name="Options" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.75
offset_top = -146.0
offset_right = 238.75
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = 21.0
offset_right = 55.5
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_kry3j")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 38.75
offset_top = 16.0
offset_right = 116.75
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("3_kry3j")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_cayip")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8gbba")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jjvhh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kry3j")
text = "<-"

[node name="WIP" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -15.5
offset_right = 133.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_kry3j")
theme_override_font_sizes/font_size = 30
text = "Work In Progress..."

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
